frontend/src/css/runescapecalc.css
/* "Global" Calc Page */

.calc-container {
  display: flex;
}

/* Monster Select */

.monster-container {
  display: flex;
  flex-direction: column;
  width: 33vw;
  align-items: center;
  justify-content: center;
}

.monster-img-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 225px;
  width: 225px;
}

.monster-img {
  border: black 1px solid;
  padding: 5px;
  height: 175px;
  width: 175px;
  box-shadow: 10px 10px 5px black, -10px -10px 5px black;
}

.monster-search-input {
  height: 30px;
  padding: 2px;
  margin: 2px;
}

.monster-search-input:focus{
  outline:2px brown solid;
  border-radius: 2px;
  border: none;
}
.monster-stats-table {
  height: 500px;
  width: 275px;
  border: black 2px solid;
}

.monster-stats-row {
 
}

.monster-stats-cell {
  width: 75px;
  height: 40px;
  text-align: center;
  font-weight: bold;
}

.monster-stats-header {
  height: 40px;
  border-bottom: 2px black solid;
}

.monster-stat {
  display: flex;
  height: 40px;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
}

.table-img {

}

/* Equipment Select */ 
.player-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 33vw;
}

.weapon-form {
    display: flex;
    flex-direction: column;
    height: 80vh;
    width: 50vw;
    border: black 3px solid;
    border-radius: 5px;
    margin: 5px;
    background-color: rgb(202, 200, 200);
}

.combat-style {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, 1fr);
}

.grid-square {
    border: black 3px solid;
    padding: 20px;
    margin: 20px;
}

li {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.style-select {
    display: flex;
    margin-top: 4px;
    width: 100%;
    justify-content: space-between;
}

select { 
    width: 15vh;
}

.form-header {
    display: flex;
    margin-top: 20px;
    margin-left: 20px;
    flex-direction: column;
    width: 30%;
}

.style-label {
    display: flex;
    font-size: x-large;
    font-weight: bold;
    justify-content: center;
    width: 100%;
}

.item-stats {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: repeat(4, 1fr);
    width: 60%;
    margin-top: 20px; 
    margin-left: 10px;
}

.header-split {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    height: 40%;
}

.stat-box{
    display: flex;
    height: auto;
    width: auto;
    align-items: center;
    justify-content: space-evenly;
    border: 1px black solid;
}

.stat-input {
    display: flex;
    text-align: center;
    width: 35%;
    height: 50%;
}

.submit-square {
    grid-row: 3;
    grid-column: 2;
    margin-left: 20px;
    margin-top: 20px;
}

  .modal-container {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1000;
  }

  /* Equipment Select */

  .equip-select {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 500px;
    width: 24vw;
    border: 2px black solid;
  }

  .item-display{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(5, 1fr);
  }

  .item-square {
    display: flex;
    height: 60px;
    width: 60px;
    margin: 10px;
    align-items: center;
    justify-content: center;
    text-align: center;
    border: brown 2px solid;
  }

  .active-item {
    cursor: pointer;
  }

  .head {
    grid-column: 2/3;
    grid-row: 1/2;
  }

  .cape {
    grid-column: 1/2;
    grid-row: 2/3;
  }

  .neck {
    grid-column: 2/3;
    grid-row: 2/3;
  }

  .ammunition {
    grid-column: 3/4;
    grid-row: 2/3;
  }
  
  .weapon {
    grid-column: 1/2;
    grid-row: 3/4;
  }

  .body {
    grid-column: 2/3;
    grid-row: 3/4;
  }

  .shield {
    grid-column: 3/4;
    grid-row: 3/4;
  }

  .legs {
    grid-column: 2/3;
    grid-row: 4/5;
  }

  .hands {
    grid-column: 1/2;
    grid-row: 5/6;
  }

  .feet {
    grid-column: 2/3;
    grid-row: 5/6;
  }

  .ring {
    grid-column: 3/4;
    grid-row: 5/6;
  }

  .item-search {
    height: 30px;
    padding: 2px;
  }

  .item-search:focus{
    outline:2px brown solid;
    border-radius: 2px;
    border: none;
  }


  /* Total Bonus Display */

  .bonus-container {
    display: grid;
    border: black 2px solid; 
    margin: 2px;
    width: 24vw;
    height: 260px;
    grid-template-rows: repeat(6, 1fr);
    grid-template-columns: repeat(3, 1fr);
  }

  .bonus-grid-header {
    display: flex;
    font-weight: 900;
    font-size: large;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: 2px;
   
  }

  .bonus-grid-square {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: 2px;
   
  }

  .bonus-grid-image {
    display: flex;
    width: 24px;
    height: 24px;
  }

  .bonus-display {
    display: flex;
    width: 40%;
    height: 50%;
    margin: 2px;
    align-items: center;
    justify-content: center;
    font-weight: bold;
  }

  .style-select-container {
    display: flex;
    flex-direction: column;
    width: 80%;
    min-width: 240px;
  }

  .style-option {
    display: flex;
    cursor: pointer;
    flex-direction: column;
    justify-content: center;
    align-items: baseline;
    border: black 1px solid;
    margin: 1px;
    padding: 1px;
    height: 48px;
  }

  .active-style {
    font-weight: bold;
    border: none;
    outline: black 2px solid;
  }

  .spell-select {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  /* DPS Results */

  .results-container {
    display: flex;
    width: 33vw;
    align-items: center;
    
  }

  .results-table {
   background-color: aliceblue;
   border: black 2px solid;
    height: 20vh;
    width: 15vw;
  }

  .results-row {

  }
  
  .results-cat-cell {
    width: 100px;
    height: 40px;
    padding-left: 2px
  
  }

  .results-cell {
    border: black 1px solid;
    width: 40px;
    text-align: center;
  }

  .results-cell:hover {
    border: 2px black solid;
  }
  
  .results-header {
    text-align: left;
    vertical-align: bottom;
    border-bottom: black 3px solid;
    height: 40px;
  }
  
.select-icons {
  display: flex;
  height: 50px;
  width: 80%;
  min-width: 260px;
  background-color: rgb(154, 154, 168);
  align-items: center;
  justify-content: center;
}

.icon-option {
  display: flex;
  background-color: rgb(206, 206, 206);
  border: black 1px solid;
  padding: 10px;
  margin-left: 2px;
  height: 48px;
  width: 48px;
}

.icon-option:hover {
  cursor: pointer;
  background-color: rgb(255, 254, 196); 
}

.view-select-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 30%;
}

.stat-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  border: black 2px solid;
  width: 80%;
}

.stat-grid {
  display: grid;
  height: 256px;
  grid-template-columns: 2fr 5fr 2fr 5fr
}

.stat-input {
  display: flex;
  flex-direction: column;
  margin-left: 2px;
  font-size: 14px;
}

.stat-cell {
  display: flex;
  align-items: center;
  justify-content: center;
}

.stat-boost-container {
  display: flex;
  height: 360px;
  background-color: aliceblue;
  justify-content: center;
}

/* ------- Potion Select --------- */

.potion-list {
  display: flex;
  flex-direction: column;
  border: black 1px solid;
  width: 90%;
}

.potion-cell {
  display: flex;
  height: 28px;
  width: 100%;
  padding: 2px;
  margin: 1px;
  align-items: center;
  border: 1px black solid;
}

.potion-cell:hover {
  background-color: aqua;
  cursor: pointer;
}

.right {
  display: none;
  
  margin-left: auto;
}

.potion-cell:hover .right {
  display: initial;
  font-weight: bolder;
}

.potion-img {
  height: 24px;
  margin-right: 4px;
}

.potion-cell.selected {
  background-color: #cdeffc;
  border: 2px solid #4dabf7;
}

/* ---------- Prayer Select  ---------- */

.prayer-select-container {
  display: flex;
  flex-direction: column;
  width: 80%;
  height: 300px;
  justify-content: center;
  align-items: center;
  background-color:rgb(219, 219, 221);
}

.prayer-select-grid {
  display: grid;
  border: black 2px black;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.prayer-select-cell {
  display: flex;
  justify-content: center;
  align-items: center;
}

.prayer-select-cell:hover {
  cursor: pointer;
}

.prayer-select-cell.active {
    border: 2px solid gold;
    background-color: rgba(255, 215, 0, 0.2);
}

